cfn_benchmark/cfn_templates/Tianyi2__IRIS/data/cloudformation_collected_templates_new/template_09244_121333316.yaml
Resources:
  SdkTestCluster06538ACD:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Resource
  SdkTestClusterVpc1CD1388F:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/Resource
  SdkTestClusterVpcPublicSubnet1Subnet61E5A45E:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: SdkTestClusterVpc1CD1388F
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1/Subnet
  SdkTestClusterVpcPublicSubnet1RouteTableA9E55948:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: SdkTestClusterVpc1CD1388F
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1/RouteTable
  SdkTestClusterVpcPublicSubnet1RouteTableAssociation11FA092A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SdkTestClusterVpcPublicSubnet1RouteTableA9E55948
      SubnetId:
        Ref: SdkTestClusterVpcPublicSubnet1Subnet61E5A45E
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1/RouteTableAssociation
  SdkTestClusterVpcPublicSubnet1DefaultRouteDCFC8C8E:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: SdkTestClusterVpcPublicSubnet1RouteTableA9E55948
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: SdkTestClusterVpcIGWFEDCC948
    DependsOn:
      - SdkTestClusterVpcVPCGW40A0B9C2
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1/DefaultRoute
  SdkTestClusterVpcPublicSubnet1EIP7EA523B5:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1/EIP
  SdkTestClusterVpcPublicSubnet1NATGateway8233B640:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: SdkTestClusterVpcPublicSubnet1Subnet61E5A45E
      AllocationId:
        Fn::GetAtt:
          - SdkTestClusterVpcPublicSubnet1EIP7EA523B5
          - AllocationId
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet1/NATGateway
  SdkTestClusterVpcPublicSubnet2Subnet947E3043:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: SdkTestClusterVpc1CD1388F
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2/Subnet
  SdkTestClusterVpcPublicSubnet2RouteTable3765AB23:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: SdkTestClusterVpc1CD1388F
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2/RouteTable
  SdkTestClusterVpcPublicSubnet2RouteTableAssociationACD648AC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SdkTestClusterVpcPublicSubnet2RouteTable3765AB23
      SubnetId:
        Ref: SdkTestClusterVpcPublicSubnet2Subnet947E3043
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2/RouteTableAssociation
  SdkTestClusterVpcPublicSubnet2DefaultRoute30EA5F03:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: SdkTestClusterVpcPublicSubnet2RouteTable3765AB23
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: SdkTestClusterVpcIGWFEDCC948
    DependsOn:
      - SdkTestClusterVpcVPCGW40A0B9C2
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2/DefaultRoute
  SdkTestClusterVpcPublicSubnet2EIPB6CDDB22:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2/EIP
  SdkTestClusterVpcPublicSubnet2NATGatewayB2DAA7E8:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: SdkTestClusterVpcPublicSubnet2Subnet947E3043
      AllocationId:
        Fn::GetAtt:
          - SdkTestClusterVpcPublicSubnet2EIPB6CDDB22
          - AllocationId
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PublicSubnet2/NATGateway
  SdkTestClusterVpcPrivateSubnet1Subnet258E6595:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: SdkTestClusterVpc1CD1388F
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet1/Subnet
  SdkTestClusterVpcPrivateSubnet1RouteTable61BA7C93:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: SdkTestClusterVpc1CD1388F
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet1/RouteTable
  SdkTestClusterVpcPrivateSubnet1RouteTableAssociation5FDB77DE:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SdkTestClusterVpcPrivateSubnet1RouteTable61BA7C93
      SubnetId:
        Ref: SdkTestClusterVpcPrivateSubnet1Subnet258E6595
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet1/RouteTableAssociation
  SdkTestClusterVpcPrivateSubnet1DefaultRoute7E175E95:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: SdkTestClusterVpcPrivateSubnet1RouteTable61BA7C93
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: SdkTestClusterVpcPublicSubnet1NATGateway8233B640
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet1/DefaultRoute
  SdkTestClusterVpcPrivateSubnet2Subnet9B75D34E:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: SdkTestClusterVpc1CD1388F
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet2/Subnet
  SdkTestClusterVpcPrivateSubnet2RouteTableB74F1B0B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: SdkTestClusterVpc1CD1388F
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet2/RouteTable
  SdkTestClusterVpcPrivateSubnet2RouteTableAssociation1EB40C5C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SdkTestClusterVpcPrivateSubnet2RouteTableB74F1B0B
      SubnetId:
        Ref: SdkTestClusterVpcPrivateSubnet2Subnet9B75D34E
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet2/RouteTableAssociation
  SdkTestClusterVpcPrivateSubnet2DefaultRoute2046CE0D:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: SdkTestClusterVpcPrivateSubnet2RouteTableB74F1B0B
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: SdkTestClusterVpcPublicSubnet2NATGatewayB2DAA7E8
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/PrivateSubnet2/DefaultRoute
  SdkTestClusterVpcIGWFEDCC948:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: EcsCredentialsStack/SdkTestCluster/Vpc
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/IGW
  SdkTestClusterVpcVPCGW40A0B9C2:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: SdkTestClusterVpc1CD1388F
      InternetGatewayId:
        Ref: SdkTestClusterVpcIGWFEDCC948
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/Vpc/VPCGW
  SdkTestCluster7B700683:
    Type: AWS::ECS::ClusterCapacityProviderAssociations
    Properties:
      CapacityProviders:
        - FARGATE
        - FARGATE_SPOT
      Cluster:
        Ref: SdkTestCluster06538ACD
      DefaultCapacityProviderStrategy: []
    Metadata:
      aws:cdk:path: EcsCredentialsStack/SdkTestCluster/SdkTestCluster
  TaskDefTaskRole1EDB4A67:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: EcsCredentialsStack/TaskDef/TaskRole/Resource
  TaskDef54694570:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image:
            Fn::Sub: ${AWS::AccountId}.dkr.ecr.${AWS::Region}.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}:717bab7534965d0e226d5ceabc35b906e70b3304c263730d953208b8bf533b1c
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: TaskDefCredentialProviderTestContainerLogGroup691C353F
              awslogs-stream-prefix: ecs-test-app
              awslogs-region:
                Ref: AWS::Region
          Name: CredentialProviderTestContainer
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - TaskDefExecutionRoleB4775C97
          - Arn
      Family: EcsCredentialsStackTaskDef4FBE4EF2
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - TaskDefTaskRole1EDB4A67
          - Arn
    Metadata:
      aws:cdk:path: EcsCredentialsStack/TaskDef/Resource
  TaskDefCredentialProviderTestContainerLogGroup691C353F:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: EcsCredentialsStack/TaskDef/CredentialProviderTestContainer/LogGroup/Resource
  TaskDefExecutionRoleB4775C97:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: EcsCredentialsStack/TaskDef/ExecutionRole/Resource
  TaskDefExecutionRoleDefaultPolicy0DBB737A:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/
                  - Fn::Sub: cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - TaskDefCredentialProviderTestContainerLogGroup691C353F
                - Arn
        Version: "2012-10-17"
      PolicyName: TaskDefExecutionRoleDefaultPolicy0DBB737A
      Roles:
        - Ref: TaskDefExecutionRoleB4775C97
    Metadata:
      aws:cdk:path: EcsCredentialsStack/TaskDef/ExecutionRole/DefaultPolicy/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/2VRwW7CMAz9Fu4hGz3tysqGkKatKhNXlKamM23jKk5AqOq/L6GwTtvJLy/P9rOdyEQ+ztSZ57qs5w0Wst86pWsRqH0PmmWfNp4dWJEezH+Yqk5pdJfM0glLsEtm0qgckmHxqmylHHwqrldwQIORjsl/GTJOoQE7cYMAnch+1+mo32WpyHzRoN76woCL3IRy8rFJ0cDET9wvRz/iCF42WQzvyq2Dx7O6iMziKcCp8MaECQO+C0Ynt9fShT19tWDcIFC1ss9pNHCNGQWz14wRxXnsXjGDY7kiXYPdtKqK7kKv8Cdz6IjRkb08KwbRUBV2/0bV2pLvYqE7HgaRA5O3GsQ1PRysQlNFzYd3nR+XcpfEW5Epb1s1VII88sNp8SQXiVzMjow4t944bEHmY/wGtRCGMhUCAAA=
    Metadata:
      aws:cdk:path: EcsCredentialsStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Outputs:
  ClusterArn:
    Value:
      Fn::GetAtt:
        - SdkTestCluster06538ACD
        - Arn
  TaskArn:
    Value:
      Ref: TaskDef54694570
  ClusterVpcId:
    Value:
      Ref: SdkTestClusterVpc1CD1388F
  ClusterVpcSubnet0:
    Value:
      Ref: SdkTestClusterVpcPrivateSubnet1Subnet258E6595
  LogGroupName:
    Value:
      Ref: TaskDefCredentialProviderTestContainerLogGroup691C353F
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
